--- a/index.html
+++ b/index.html
@@ -1,64 +1,64 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh-CN">
   <head>
-    <meta charset="utf-8" />
-    <title>LiDAR Forest</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Terminus</title>
     <style>
-      html,
-      body {
+      * {
         margin: 0;
         padding: 0;
+        box-sizing: border-box;
+      }
+
+      body,
+      html {
+        width: 100%;
+        height: 100%;
         overflow: hidden;
         background: #000;
-        font: 14px/1.4 monospace;
-        color: #fff;
+        font-family: "Courier New", monospace;
+        color: #00ff88;
       }
-      #hud {
-        position: fixed;
-        top: 68px;
-        left: 8px;
-        white-space: pre;
+
+      #app {
+        width: 100%;
+        height: 100%;
+        position: relative;
       }
-      #interactionBox {
-        position: fixed;
-        bottom: 10%;
+
+      .loading {
+        position: absolute;
+        top: 50%;
         left: 50%;
-        transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.5);
-        padding: 8px 14px;
-        border: 1px solid #555;
-        border-radius: 4px;
-        display: none;
+        transform: translate(-50%, -50%);
+        text-align: center;
+        z-index: 1000;
       }
-      #overlay {
-        position: fixed;
-        inset: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #ccc;
-        font-size: 20px;
-        cursor: pointer;
-        background: rgba(0, 0, 0, 0.6);
+
+      .loading::after {
+        content: "";
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        border: 2px solid #00ff88;
+        border-radius: 50%;
+        border-top-color: transparent;
+        animation: spin 1s linear infinite;
+        margin-left: 10px;
       }
-      #modeTag {
-        position: fixed;
-        top: 8px;
-        right: 8px;
-        padding: 4px 8px;
-        background: #222;
-        border: 1px solid #444;
-        border-radius: 4px;
-        font-size: 12px;
+
+      @keyframes spin {
+        to {
+          transform: rotate(360deg);
+        }
       }
     </style>
   </head>
   <body>
-    <div id="hud"></div>
-    <div id="modeTag">MODE: NORMAL</div>
-    <div id="interactionBox"></div>
-    <div id="overlay">加载中...</div>
+    <div id="app">
+      <div class="loading">正在加载终点站...</div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
