--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terminus</title>
+    <title>Terminus 3D Game</title>
     <style>
       * {
         margin: 0;
@@ -11,54 +11,80 @@
         box-sizing: border-box;
       }
 
-      body,
-      html {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
+      body {
+        font-family: "Arial", sans-serif;
         background: #000;
-        font-family: "Courier New", monospace;
-        color: #00ff88;
+        overflow: hidden;
+        height: 100vh;
       }
 
-      #app {
+      #gameContainer {
+        position: relative;
+        width: 100vw;
+        height: 100vh;
+      }
+
+      .layer {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
-        position: relative;
       }
 
-      .loading {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        text-align: center;
+      #loadingScreen {
+        background: linear-gradient(135deg, #1e3c72, #2a5298);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        color: white;
         z-index: 1000;
       }
 
-      .loading::after {
-        content: "";
-        display: inline-block;
-        width: 20px;
-        height: 20px;
-        border: 2px solid #00ff88;
+      .loader {
+        border: 4px solid rgba(255, 255, 255, 0.3);
+        border-top: 4px solid #fff;
         border-radius: 50%;
-        border-top-color: transparent;
-        animation: spin 1s linear infinite;
-        margin-left: 10px;
+        width: 50px;
+        height: 50px;
+        animation: spin 2s linear infinite;
+        margin-bottom: 20px;
       }
 
       @keyframes spin {
-        to {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
           transform: rotate(360deg);
         }
+      }
+
+      #interactionHint {
+        position: absolute;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        color: white;
+        background: rgba(0, 0, 0, 0.7);
+        padding: 10px 20px;
+        border-radius: 5px;
+        display: none;
+        z-index: 100;
       }
     </style>
   </head>
   <body>
-    <div id="app">
-      <div class="loading">正在加载终点站...</div>
+    <div id="gameContainer">
+      <div id="loadingScreen" class="layer">
+        <div class="loader"></div>
+        <p>加载中...</p>
+      </div>
+
+      <div id="interactionHint">按 E 键交互</div>
     </div>
-    <script type="module" src="/src/main.ts"></script>
+
+    <script type="module" src="/core/main.js"></script>
   </body>
 </html>
