--- a/index.html
+++ b/index.html
@@ -174,6 +174,6 @@
 
     <!-- 链接外部JavaScript脚本 (放在body结束前以确保DOM加载完毕) -->
     <script type="module" src="./core/main.js"></script>
-    <script type="module" src="./scripts/mainmenu/script.js"></script>
+    <script src="./scripts/mainmenu/script.js"></script>
   </body>
 </html>
