--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <p><strong>Debug指南 (在debug启用时):</strong></p>
           <p>1. Ctrl + L 切换雷达显示</p>
           <p>2. Ctrl + D 切换开发者工具</p>
-          <p>3. Ctrl + C 切换创造模式</p>
+          <p>3. Ctrl + C 切换创造模式，上下键可以控制飞行高度</p>
           <p>4. Ctrl + B 刷新场景碰撞箱信息</p>
           <p>5. Ctrl + V 隐藏场景碰撞箱信息</p>
         </div>
@@ -223,7 +223,7 @@
           <p><strong>Debug指南 (在debug启用时):</strong></p>
           <p>1. Ctrl + L 切换雷达显示</p>
           <p>2. Ctrl + D 切换开发者工具</p>
-          <p>3. Ctrl + C 切换创造模式</p>
+          <p>3. Ctrl + C 切换创造模式，上下键可以控制飞行高度</p>
           <p>4. Ctrl + B 刷新场景碰撞箱信息</p>
           <p>5. Ctrl + V 隐藏场景碰撞箱信息</p>
         </div>
