游戏提示与作弊机制

--- a/index.html
+++ b/index.html
@@ -113,11 +113,13 @@
           <p>4. 鼠标焦点脱离以后点击屏幕可以重新聚焦</p>
           <br />
           <p><strong>Debug指南 (在debug启用时):</strong></p>
+          <p><strong>0. Ctrl + X 本幕游戏提示/作弊</strong></p>
           <p>1. Ctrl + L 切换雷达显示</p>
           <p>2. Ctrl + D 切换开发者工具</p>
           <p>3. Ctrl + C 切换创造模式，上下键可以控制飞行高度</p>
           <p>4. Ctrl + B 刷新场景碰撞箱信息</p>
           <p>5. Ctrl + V 隐藏场景碰撞箱信息</p>
+          <p>6. Ctrl + R 传送回本幕重生点</p>
         </div>
         <button class="menu-button" onclick="showPage('home')">返回</button>
       </div>
@@ -221,11 +223,13 @@
           <p>4. 鼠标焦点脱离以后点击屏幕可以重新聚焦</p>
           <br />
           <p><strong>Debug指南 (在debug启用时):</strong></p>
+          <p><strong>0. Ctrl + X 本幕游戏提示/作弊</strong></p>
           <p>1. Ctrl + L 切换雷达显示</p>
           <p>2. Ctrl + D 切换开发者工具</p>
           <p>3. Ctrl + C 切换创造模式，上下键可以控制飞行高度</p>
           <p>4. Ctrl + B 刷新场景碰撞箱信息</p>
           <p>5. Ctrl + V 隐藏场景碰撞箱信息</p>
+          <p>6. Ctrl + R 传送回本幕重生点</p>
         </div>
         <button id="pause-howto-back-btn" class="menu-button">返回</button>
       </div>
